# my-api

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2021-05-13-235842_create_vehicle/: down.sql  up.sql
migrations/2021-05-14-000052_create_post/: up.sql
migrations/2021-05-14-001852_create_fillup/: up.sql
src/: .env  auth.rs  connection.rs  custom_types.rs  data.rs  error.rs  handler.rs  main.rs  models.rs  schema.rs
src/db/: mod.rs  setup.rs  todo.rs
src/routes/: authentication.rs  mod.rs  post.rs
src/src/: schema.rs
