[package]
name = "my_api"
version = "0.1.0"
authors = ["Jake Neumann <thejakeneumann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "=7.2"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
env_logger = "0.5.12"
log = "0.4.6"

[profile.dev]
debug = 2

[profile.test]
debug = 0

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = 'abort'
